Revision history for Template-Mustache

{{$NEXT}}

1.2.3  2021-03-19T02:00:29-04:00
    - Fix {{.}} lookup in scalar sections
    - Update spec tests with upstream changes

1.2.2  2020-07-24T23:53:15-04:00
    - Add :pragma<KEEP-UNUSED-VARIABLES> feature
    - Fix logging feature compatibility with rakudo-2019.11.01

1.2.1  2020-07-17T01:40:07-04:00
    - Add Template::Mustache::Logger class to control logging detail
    - Prefer `:log-level<Warn>` instead of `:warn` option for `.render`
    - The source repository is now called raku-Template-Mustache

1.2.0  2020-07-15T23:33:07-04:00
    - Cache everything, including files, partials and lambdas
    - Template inheritance: Partials that can override values from parent

1.1.4  2020-05-06T17:49:36-04:00
    - Initial CPAN version, see source repository for history