@@ -1,7 +1,3 @@
-/Template-Mustache-[0-9]*
-t/spec-partials
-Makefile
-blib
 .precomp/
-t/.precomp/
-lib/.precomp/
+/Template-Mustache-*
+*.rakucov
