@@ -1,12 +1,0 @@
-services:
-  - docker
-
-install:
-  - docker pull jjmerelo/test-perl6
-  - docker images
-  - docker run -t --entrypoint=/bin/sh jjmerelo/test-perl6 -c 'apk update && apk upgrade && apk add openssl-dev'
-  - docker run -t --entrypoint=/bin/sh jjmerelo/test-perl6 -c 'raku --version; which zef; zef --installed list'
-
-script:
-  - docker run -t -v $TRAVIS_BUILD_DIR:/test --entrypoint=/bin/sh jjmerelo/test-perl6
-    -c 'zef install . --deps-only; zef --verbose install . --/test; TEST_ALL=1 prove6 -v t'
