@@ -1,9 +1,9 @@
 {
   "api": "1.2.0",
-  "auth": "github:softmoth",
+  "auth": "zef:raku-community-modules",
   "authors": [
     "Tim Smith",
-    "Richard Hainsworth"
+    "Tim Siegel"
   ],
   "build-depends": [
   ],
@@ -12,18 +12,18 @@
   "description": "A logic-free, cross-language templating format",
   "license": "Artistic-2.0",
   "name": "Template::Mustache",
-  "perl": "6.d",
-  "production": 1,
+  "production": true,
   "provides": {
     "Template::Mustache": "lib/Template/Mustache.rakumod"
   },
   "raku": "6.d",
   "resources": [
   ],
-  "source-url": "https://github.com/softmoth/raku-Template-Mustache.git",
+  "source-url": "https://github.com/raku-community-modules/Template-Mustache.git",
   "support": {
-    "bugtracker": "https://github.com/softmoth/raku-Template-Mustache/issues",
-    "source": "https://github.com/softmoth/raku-Template-Mustache.git"
+    "bugtracker": "https://github.com/raku-community-modules/Template-Mustache/issues",
+    "email": "community@raku.org",
+    "source": "https://github.com/raku-community-modules/Template-Mustache.git"
   },
   "tags": [
     "mustache",
@@ -32,9 +32,6 @@
     "text"
   ],
   "test-depends": [
-    "JSON::Fast",
-    "Test",
-    "Test::META"
   ],
-  "version": "1.2.3"
+  "version": "1.2.4"
 }
