@@ -1,14 +1,11 @@
-; App::Mi6 configuration
+name = Template::Mustache
 
 [ReadmeFromPod]
-filename=doc/Template/Mustache.rakudoc
+filename=doc/Template-Mustache.rakudoc
+
+[UploadToZef]
 
 [Badges]
-provider = travis-ci.org
-provider = appveyor
-
-[PruneFiles]
-filename = dist.ini
-match = ^ '.appveyor'
-match = ^ '.git'
-match = ^ '.travis'
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
