@@ -1,8 +1,0 @@
-use Test;
-use Test::META;
-
-plan 1;
-
-meta-ok;
-
-# vim:set ft=raku:
