@@ -10,4 +10,4 @@ is $m.render('Hello, {{lambda}}!', { lambda => $l.EVAL }),
     "Hello, world!",
     'Interpolate lambda value';
 
-# vim:set ft=raku:
+# vim: expandtab shiftwidth=4
