@@ -27,4 +27,4 @@ $m.logger.routines<Warn> = &die;
 dies-ok { $m.render: '{{missing}}', {} },
     "Set log routine for Warn level to \&die";
 
-# vim:set ft=raku:
+# vim: expandtab shiftwidth=4
