@@ -13,4 +13,4 @@ is $tm.render('{{object.name}}: {{object}}', { object => TestObj.new }),
     "TestObj: I am your father!",
     'Object stringifies';
 
-# vim:set ft=raku:
+# vim: expandtab shiftwidth=4
